<resources>
    <string name="app_name">MiRegistro</string>
    <string name="bienvenido">Bienvenido a mi aplicación :)</string>
    <string name="registro">Registro</string>
    <string name="correo">Correo electrónico</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Password</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Dirección</string>
    <string name="edad">Edad</string>
    <string name="sexo">Sexo</string>
    <string name="navegacion">¿Qué desea hacer?</string>
    <string name="modificar_radio">Modificar usuario</string>
    <string name="buscar">Buscar usuario</string>
    <string name="salir">Salir</string>
    <string name="descripcion">Seleccione el campo que desea modificar</string>
    <string name="introduzcapass">Introduzca su contraseña</string>
    <string name="busquedapor">Busqueda por...</string>
</resources>