<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Busqueda">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/buscar"
                android:textSize="30sp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@+id/textViewModificar"
                android:text="@string/busquedapor"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewDescripcion"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"/>

            <Spinner
                android:id="@+id/campos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input"
                android:layout_marginLeft="330dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/correo"
                android:text="@string/correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:layout_below="@+id/input"/>

            <TextView
                android:id="@+id/usuario"
                android:text="@string/usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_below="@+id/correo"/>

            <TextView
                android:id="@+id/nombre"
                android:text="@string/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_below="@+id/usuario"/>

            <TextView
                android:id="@+id/direccion"
                android:text="@string/direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_below="@+id/nombre"/>

            <TextView
                android:id="@+id/edad"
                android:text="@string/edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_below="@+id/direccion"/>

            <TextView
                android:id="@+id/sexo"
                android:text="@string/sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_below="@+id/edad"/>

            <ImageButton
                android:id="@+id/confirmarBusqueda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sexo"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:layout_marginRight="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/check_button" />

            <ImageButton
                android:id="@+id/regresarNavegacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sexo"
                android:layout_marginTop="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/flecha_regresar"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>