<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_uno">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/registro"
                android:textSize="24sp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/correoElectronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewRegistro"
                android:hint="Correo electrónico"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="10dp"/>

            <EditText
                android:id="@+id/nombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/correoElectronico"
                android:hint="@string/usuario"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="10dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nombreUsuario"
                android:hint="@string/pass"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="10dp"
                android:inputType="textPassword"/>
            
            <Button
                android:layout_width=""
                android:layout_height=""







        </RelativeLayout>

    </LinearLayout>

</ScrollView>