<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_dos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/registro"
                android:textSize="30sp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewRegistro"
                android:hint="@string/nombre"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="10dp"/>

            <EditText
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nombre"
                android:hint="@string/direccion"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="10dp"/>

            <EditText
                android:id="@+id/edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/direccion"
                android:hint="@string/edad"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="10dp"
                android:inputType="numberDecimal"/>

            <TextView
                android:id="@+id/sexo"
                android:layout_below="@id/edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_below="@+id/sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="M"
                    android:textSize="20sp"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="F"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"/>

            </RadioGroup>


            <ImageButton
                android:id="@+id/confirmarRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup"
                android:layout_alignParentRight="true"
                android:layout_marginTop="50dp"
                android:layout_marginRight="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/check_button" />

            <ImageButton
                android:id="@+id/regresarRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup"
                android:layout_marginTop="50dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/flecha_regresar"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>