<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Navegacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/navegacion"
                android:textSize="30sp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"/>




            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_below="@+id/textViewRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:gravity="center"
                android:onClick="radioGroup">

                <RadioButton
                    android:id="@+id/modificarUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:text="@string/modificar_radio"
                    android:textSize="20sp"
                    android:onClick="radioGroup"/>

                <RadioButton
                    android:id="@+id/buscarUsuario"
                    android:layout_width="189dp"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:text="@string/buscar"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:onClick="radioGroup"/>

                <RadioButton
                    android:id="@+id/salir"
                    android:layout_width="189dp"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:checked="true"
                    android:text="@string/salir"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:onClick="radioGroup"/>

            </RadioGroup>


            <ImageButton
                android:id="@+id/siguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup"
                android:layout_alignParentRight="true"
                android:layout_marginTop="50dp"
                android:layout_marginRight="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageButton
                android:id="@+id/regresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup"
                android:layout_marginTop="50dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/flecha_regresar"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>