<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modificacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/modificar_radio"
                android:textSize="30sp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@+id/textViewModificar"
                android:text="@string/descripcion"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewDescripcion"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"/>

            <Spinner
                android:id="@+id/campos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/sexoModificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="Sexo"
                style="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp"
                android:layout_below="@+id/campos"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/sexoModificar">
                <RadioButton
                    android:id="@+id/m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:text="M"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="F"
                    android:layout_marginLeft="40dp" />

            </RadioGroup>

            <TextView
                android:id="@+id/introduzcaPass"
                android:text="@string/introduzcapass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="130dp"
                android:textSize="16sp"
                android:layout_below="@+id/campos"/>

            <EditText
                android:id="@+id/editTextPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/introduzcaPass"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"/>


            <ImageButton
                android:id="@+id/confirmarModificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextPass"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:layout_marginRight="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/check_button"
                android:onClick="onClickConfirmarModificacion"/>

            <ImageButton
                android:id="@+id/regresarNavegacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextPass"
                android:layout_marginTop="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/flecha_regresar"
                android:onClick="onClickRegresarNavegacion"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>